Data Wrangling Summary

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -2744,7 +2744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here: Silverton Mountain"
+    "**A: 2** Your answer here: **Silverton Mountain**"
    ]
   },
   {
@@ -5045,7 +5045,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 3** Your answer here"
+    "**A: 3** The original dataset contained 330 rows and 27 features. Upon further inspection of the data, there was reason to make some drops. The target feature was identified to be the Weekend Adult price. After dropping rows that were missing pricing information, the dataset moving onto the next phase of analysis contains 277 rows with our resort, Big Mountain Resort, in tact. There we're a few other removals to make. Since the weekend price has been made the target, the weekday price column has been dropped since it is no longer needed. One drop was made because of an error in a specific data point. The Knob Point resort in Michigan was listed as open for 2019 years. Though it was likely a data entry error (year founded) it was decided to drop the row entirely as it was missing other valuable data and would likely skew the results since it has only been in operation for a single season (if that). One hypothesis for the next phase if on the distinction between the resort name and it's prestige. While some our reffered to as 'Areas', others 'resorts' or 'Mountains', I'm curious to see if these resort types have any impact on price and will be adding this as a feature to the set in the next phase."
    ]
   }
  ],
