--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -6204,12 +6204,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** The data includes about 30 features of categorical and numerical data. Most of the relationship between state and ticket price appears to be related with the number of resorts in that state (supply) as well as the popularity of skiing among the population. Features like night skiing and the total skiable terrain are features to be wary of during modeling as they seem to be less important to ticket price, and less valuable than the other numerical features in the set. With the target feature of the Adult Weekend ticket price identified, the states label feels less relevant than using it to calculate new features related to that state—i.e. total skiable terrain by state and the availability by population."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -6660,7 +6660,7 @@
        "fastQuads_skiable_ratio                        0.001250  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
