modeling subunit submission

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1387,7 +1387,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** Big Mountain's Adult weekend price is set at 81.00 dollars. Based on the rest of the competitive set, the random forest model predicts Big Mountain's price at 95.00 (which, with a mean absolute error of ~ 10.00, conservatively suggests that Big Mountain's ticket price could increase to 85.00 today, with no operational or investment changes. However, this would make them the most expensive lift ticket in the state of Montana.\n",
+    "\n",
+    "Management could consider closing the least trafficked run with no negative impact on ticket price. They could close an additional 4 runs (5 total) for an expected loss of about 2.00/per ticket.\n",
+    "\n",
+    "Management's additional scenerios were all predicted to positively impact ticket price by an additional 4.00-6.00 per ticket. Additional analysis should be done on the cost implications for each scenario on the expected revenue."
    ]
   },
   {
@@ -1408,7 +1412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: 2** Deficiencies that hampered the data were the lack of data on park visitors, revenue, and the expenses associated with each resort amenity. Other useful information would include time spent at the park by vistor. Were people skiing all day? or were others staying for lunch or an Apres ski at the lodge (which would also impact revenue). Incentive for keeping people at the resort longer, extends beyond just the ticket revenue, and that information would be valuable to track to help the resort inform future investments."
    ]
   }
  ],
